5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_2447.log
== SUBMITION (2019-04-14 18:51:53) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	
	
	print()
-- EXECUTION TIME:
0.282259
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:52:08) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	
	
	print()
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:03:28) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p

	print("Falta" abs(x))
-- ERROR:
File "XXXX", line 7
    print("Falta" abs(x))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:03:47) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p

	print("Falta"abs(x))
-- ERROR:
File "XXXX", line 7
    print("Falta"abs(x))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:04:18) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p
print("Falta"abs(x))
-- ERROR:
File "XXXX", line 6
    print("Falta"abs(x))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:05:27) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p
	print("Falta"abs(x))
-- ERROR:
File "XXXX", line 6
    print("Falta"abs(x))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:07:14) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p
	print("Falta"abs(round(x,2)))
-- EXECUTION TIME:
0.135154
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 6
    print("Falta"abs(round(x,2)))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:08:47) 
-- CODE:
p= float(input("digite o preço:"))
pp= float(input("digite o pagamento:"))

if(p>pp):
	x= pp - p
	print("Falta",abs(round(x,2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:49:25) 
-- CODE:
preco = float(input("Valor do Produto: "))
pagamento = float(input("Valor do Pagamento: "))

if preco > pagamento:
	x = preco - pagamento
	print ("Falta ",round(x,2))
else:
	y = pagamento - preco
	print("Troco de ",round(y,2))
	
-- EXECUTION TIME:
0.152964
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
